generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// =====================
// ENUMS
// =====================

enum RolUsuario {
  COORDINADOR_TRANSPORTE
  COORDINADOR
  PICKINERO
  CARGADOR
  SUPERVISOR
  OPERADOR_TUNEL
  JEFE_DESPACHO
  SAG
  PORTERO
}

enum TipoEdificio {
  AVES
  CERDO
  FRIGORIFICO
}

enum EstadoCamion {
  ESPERADO
  EN_PORTERIA
  ASIGNADO
  EN_CARGA
  EN_TUNEL_FRIO
  ESPERANDO_SAG
  APROBADO_SAG
  RECHAZADO_SAG
  LISTO
  DESPACHADO
  AVERIADO
}

enum TipoIncidente {
  AVERIA
  FALTA_PRODUCTO
  CAMBIO_ANDEN
  REPROGRAMACION
}

enum AccionIncidente {
  ESPERAR_REPARACION
  SUSTITUIR
  REGISTRAR_FALTANTE
  REASIGNAR_ANDEN
  REPROGRAMAR
}

enum TipoCamion {
  NACIONAL
  EXPORTACION
  INTERPLANTA
}

enum EstadoInspeccion {
  PENDIENTE
  APROBADO
  RECHAZADO
}

enum EstadoPallet {
  EN_ARMADO
  ARMADO
  CARGADO
  VERIFICADO
}

enum EstadoParada {
  PENDIENTE
  EN_PROCESO
  COMPLETADO
}

enum CausaJustificacion {
  FALLA_ANDEN
  FALLA_MECANICA
  FALTA_PERSONAL
  FALTA_PRODUCTO
  VOLUMEN_EXCESIVO
  PROBLEMA_CALIDAD
  OTRO
}

// =====================
// MODELOS
// =====================

model Usuario {
  id            String      @id @default(cuid())
  nombre        String
  rut           String      @unique
  email         String      @unique
  passwordHash  String
  rol           RolUsuario
  /// Operador polivalente: PICKINERO que también puede cargar, o CARGADOR que también puede armar.
  /// Refleja la realidad operativa donde algunos operarios cumplen ambos roles según el contexto del turno.
  polivalente   Boolean     @default(false)
  edificioId    String?
  edificio      Edificio?   @relation(fields: [edificioId], references: [id])
  activo        Boolean     @default(true)
  creadoEn      DateTime    @default(now())
  actualizadoEn DateTime    @updatedAt

  // Relaciones
  eventosCamion   EventoCamion[]
  palletsArmados  Pallet[]        @relation("PalletPickinero")
  palletsCargados Pallet[]        @relation("PalletCargador")
  inspecciones    InspeccionSAG[]
  eventosTunel    EventoTunel[]
  atrasos         Atraso[]
  justificaciones JustificacionAtraso[]
  auditorias      AuditLog[]
  incidentesRegistrados IncidenteCamion[]
  andenesFueraServicio  Anden[]         @relation("AndenFueraServicio")

  @@map("usuarios")
}

model Edificio {
  id        String        @id @default(cuid())
  nombre    String
  tipo      TipoEdificio  @unique
  andenes   Anden[]
  usuarios  Usuario[]
  atrasos   Atraso[]
  pallets   Pallet[]

  @@map("edificios")
}

model Anden {
  id                    String    @id @default(cuid())
  codigo                String    @unique
  edificioId            String
  edificio              Edificio  @relation(fields: [edificioId], references: [id])
  ocupado               Boolean   @default(false)
  fueraDeServicio       Boolean   @default(false)
  motivoFueraServicio   String?
  fueraServicioDesde    DateTime?
  fueraServicioPorId    String?
  fueraServicioPor      Usuario?  @relation("AndenFueraServicio", fields: [fueraServicioPorId], references: [id])
  camiones              Camion[]
  paradas               ParadaExpedicion[]

  @@index([edificioId])
  @@map("andenes")
}

model Cliente {
  id          String     @id @default(cuid())
  nombre      String
  rut         String?    @unique   // Opcional: clientes extranjeros no tienen RUT chileno
  codigo      String?    @unique   // Código interno alternativo
  tipoDestino TipoCamion
  pais        String?              // Solo para EXPORTACION (ej: "China", "Japón")
  activo      Boolean    @default(true)
  creadoEn    DateTime   @default(now())
  pedidos     Pedido[]
  camiones    Camion[]

  @@index([tipoDestino])
  @@map("clientes")
}

model Pedido {
  id            String    @id @default(cuid())
  numero        String    @unique
  clienteId     String
  cliente       Cliente   @relation(fields: [clienteId], references: [id])
  totalPallets  Int
  totalBultos   Int
  fechaEntrega  DateTime
  camiones      Camion[]
  pallets       Pallet[]

  @@map("pedidos")
}

model Camion {
  id                      String        @id @default(cuid())
  patente                 String
  numeroTransporte        String?       @unique
  tipo                    TipoCamion
  estado                  EstadoCamion  @default(ESPERADO)
  clienteId               String?
  cliente                 Cliente?      @relation(fields: [clienteId], references: [id])
  pedidoId                String?
  pedido                  Pedido?       @relation(fields: [pedidoId], references: [id])
  andenId                 String?
  anden                   Anden?        @relation(fields: [andenId], references: [id])
  horaLlegadaPlanificada  DateTime
  horaSalidaPlanificada   DateTime?
  horaLlegadaReal         DateTime?
  horaSalidaReal          DateTime?
  cargaPreviaDescripcion  String?
  enReparacion            Boolean       @default(false)
  reparacionDesde         DateTime?
  reemplazadoPorId        String?
  reemplazadoPor          Camion?       @relation("SustitucionPorAveria", fields: [reemplazadoPorId], references: [id])
  reemplaza               Camion[]      @relation("SustitucionPorAveria")
  creadoEn                DateTime      @default(now())
  actualizadoEn           DateTime      @updatedAt

  // Relaciones
  eventos       EventoCamion[]
  entregas      Entrega[]
  inspecciones  InspeccionSAG[]
  eventosTunel  EventoTunel[]
  atrasos       Atraso[]
  paradas       ParadaExpedicion[]
  incidentes               IncidenteCamion[] @relation("IncidentesDeCamion")
  incidentesComoReemplazo  IncidenteCamion[] @relation("ReemplazoIncidente")

  @@index([estado])
  @@index([tipo])
  @@index([andenId])
  @@index([andenId, estado, horaLlegadaPlanificada])
  @@map("camiones")
}

model IncidenteCamion {
  id                       String           @id @default(cuid())
  camionId                 String
  camion                   Camion           @relation("IncidentesDeCamion", fields: [camionId], references: [id])
  tipo                     TipoIncidente
  accion                   AccionIncidente
  estadoCamionEnIncidente  EstadoCamion
  descripcion              String
  registradoPorId          String
  registradoPor            Usuario          @relation(fields: [registradoPorId], references: [id])
  timestamp                DateTime         @default(now())
  resueltoEn               DateTime?
  camionReemplazoId        String?
  camionReemplazo          Camion?          @relation("ReemplazoIncidente", fields: [camionReemplazoId], references: [id])

  @@index([camionId])
  @@index([tipo])
  @@map("incidentes_camion")
}

/// Registro inmutable (append-only) de cada cambio de estado
model EventoCamion {
  id          String        @id @default(cuid())
  camionId    String
  camion      Camion        @relation(fields: [camionId], references: [id])
  estado      EstadoCamion
  timestamp   DateTime      @default(now())
  usuarioId   String?
  usuario     Usuario?      @relation(fields: [usuarioId], references: [id])
  nota        String?

  @@index([camionId])
  @@index([timestamp])
  @@map("eventos_camion")
}

/// Cada parada que debe realizar un camión en un punto de expedición
model ParadaExpedicion {
  id                       String       @id @default(cuid())
  camionId                 String
  camion                   Camion       @relation(fields: [camionId], references: [id])
  andenId                  String?
  anden                    Anden?       @relation(fields: [andenId], references: [id])
  edificioTipo             TipoEdificio
  orden                    Int
  estado                   EstadoParada @default(PENDIENTE)
  cantidadPalletsSolicitados Int?       // Pallets pedidos por el cliente en esta parada
  horaInicio               DateTime?
  horaFin                  DateTime?
  justificacion            JustificacionAtraso?
  entrega                  Entrega?

  @@index([camionId])
  @@map("paradas_expedicion")
}

/// Una entrega agrupa todos los pallets que se cargan en un punto de expedición específico
model Entrega {
  id         String            @id @default(cuid())
  numero     Int               @unique @default(autoincrement())
  camionId   String
  camion     Camion            @relation(fields: [camionId], references: [id])
  paradaId   String?           @unique
  parada     ParadaExpedicion? @relation(fields: [paradaId], references: [id])
  pallets    Pallet[]
  items      EntregaItem[]
  creadoEn   DateTime          @default(now())

  @@index([camionId])
  @@map("entregas")
}

/// Producto del catálogo interno
model Producto {
  id             String        @id @default(cuid())
  sku            String        @unique
  nombre         String
  unidadMedida   String        @default("caja")
  pesoKgUnitario Float?
  activo         Boolean       @default(true)
  creadoEn       DateTime      @default(now())

  entregaItems   EntregaItem[]
  palletItems    ProductoPallet[]

  @@map("productos")
}

/// Ítem de una entrega: qué producto se solicita y en qué cantidad
model EntregaItem {
  id                 String   @id @default(cuid())
  entregaId          String
  entrega            Entrega  @relation(fields: [entregaId], references: [id], onDelete: Cascade)
  productoId         String
  producto           Producto @relation(fields: [productoId], references: [id])
  cantidadSolicitada Int

  @@unique([entregaId, productoId])
  @@index([entregaId])
  @@map("entrega_items")
}

/// Justificación de atraso atribuida a una parada específica
model JustificacionAtraso {
  id                String             @id @default(cuid())
  paradaId          String             @unique
  parada            ParadaExpedicion   @relation(fields: [paradaId], references: [id])
  causa             CausaJustificacion
  descripcion       String?
  excluirDelCalculo Boolean            @default(true)
  registradoPorId   String
  registradoPor     Usuario            @relation(fields: [registradoPorId], references: [id])
  creadoEn          DateTime           @default(now())

  @@index([paradaId])
  @@map("justificaciones_atraso")
}

model Pallet {
  id                   String        @id @default(cuid())
  codigoUnico          String        @unique
  entregaId            String?
  entrega              Entrega?      @relation(fields: [entregaId], references: [id])
  pedidoId             String?
  pedido               Pedido?       @relation(fields: [pedidoId], references: [id])
  pickineroId          String?
  pickinero            Usuario?      @relation("PalletPickinero", fields: [pickineroId], references: [id])
  cargadorId           String?
  cargador             Usuario?      @relation("PalletCargador", fields: [cargadorId], references: [id])
  edificioId           String?
  edificio             Edificio?     @relation(fields: [edificioId], references: [id])
  estado               EstadoPallet  @default(EN_ARMADO)
  timestampInicio      DateTime      @default(now())
  timestampFin         DateTime?
  tiempoArmadoSegundos Int?
  productos            ProductoPallet[]

  @@index([entregaId])
  @@index([pedidoId])
  @@map("pallets")
}

model ProductoPallet {
  id            String    @id @default(cuid())
  palletId      String
  pallet        Pallet    @relation(fields: [palletId], references: [id], onDelete: Cascade)
  productoId    String?
  producto      Producto? @relation(fields: [productoId], references: [id])
  codigoBarras  String?
  descripcion   String
  cantidad      Int
  pesoKg        Float?
  temperatura   Float?

  @@index([palletId])
  @@map("productos_pallet")
}

model InspeccionSAG {
  id                    String            @id @default(cuid())
  camionId              String
  camion                Camion            @relation(fields: [camionId], references: [id])
  inspectorId           String
  inspector             Usuario           @relation(fields: [inspectorId], references: [id])
  estado                EstadoInspeccion  @default(PENDIENTE)
  timestampInicio       DateTime          @default(now())
  timestampResolucion   DateTime?
  observaciones         String?
  documentoUrl          String?

  @@index([camionId])
  @@map("inspecciones_sag")
}

model EventoTunel {
  id                    String    @id @default(cuid())
  camionId              String
  camion                Camion    @relation(fields: [camionId], references: [id])
  operadorId            String
  operador              Usuario   @relation(fields: [operadorId], references: [id])
  temperaturaRegistrada Float
  timestamp             DateTime  @default(now())
  observaciones         String?

  @@map("eventos_tunel")
}

model Atraso {
  id              String    @id @default(cuid())
  camionId        String
  camion          Camion    @relation(fields: [camionId], references: [id])
  edificioId      String
  edificio        Edificio  @relation(fields: [edificioId], references: [id])
  motivoCodigo    String
  motivoDetalle   String?
  minutosAtraso   Int
  registradoPor   String
  registrador     Usuario   @relation(fields: [registradoPor], references: [id])
  timestamp       DateTime  @default(now())

  @@index([camionId])
  @@map("atrasos")
}

model AuditLog {
  id          String    @id @default(cuid())
  usuarioId   String?
  usuario     Usuario?  @relation(fields: [usuarioId], references: [id])
  accion      String
  entidadTipo String
  entidadId   String
  payload     Json?
  ip          String?
  timestamp   DateTime  @default(now())

  @@index([entidadTipo, entidadId])
  @@index([timestamp])
  @@map("audit_log")
}
